# backend/src/routers/auth.router.ts
@@ -25,10 +25,6 @@ router.post(
   authController.checkToken,
 );
 
-router.post(
-  "/logout",
-  authMiddleware.checkAccessToken,
-  authController.logout,
-);
+router.post("/logout", authMiddleware.checkAccessToken, authController.logout);
 
 export const authRouter = router;
